2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp:
	* gui/oprof_start.cpp: hardcode config directory to /root,
	  rename get_user_filename() to get_config_filename()

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.cpp:

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.cpp: fix detection of stopped daemon. Fix a
	  miscounted interrupt nr after a start/stop/start

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml: improve documentation about RTC mode.

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: fix events parsing according to the way
	  we store them in setupfile changed by the last patch.

2005-08-02  Richard Purdie  <rpurdie@openedhand.com>

	* HACKING: Add note about bashisms being bad
	* doc/oprofile.xml: Remove bash dependency
	* utils/opcontrol: remove bashisms from the script

2005-08-02  Richard Purdie  <rpurdie@openedhand.com>

	* utils/opcontrol: remove some bashism, not yet enough to remove
	  bash dependency

2005-07-21  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.9.2cvs

2005-07-18  John Levon  <levon@movementarian.org>

	* libutil++/tests/Makefile.am: canonicalize
	  SRCDIR to fix make check

2005-07-18  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.9.1

2005-07-11  John Levon  <levon@movementarian.org>

	* module/oprofile.c: fix for GCC 3.4, spotted by
	  Jason Lunz <lunz@falooley.org>

2005-01-06  Ralf Baechle  <ralf@linux-mips.org>

	* events/Makefile.am:
	* events/mips/24K/events:
	* events/mips/24K/unit_masks:
	* libop/op_events.c:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c:
	* utils/ophelp.c: Add MIPS 24K support

2005-06-16  Richard Purdie  <rpurdie@o-hand.com>

	* utils/opcontrol: fix ARM kernels again after 2005-05-04
	  change to op_bfd.cpp broke it again. Only look for .text
	  section for our kernel range.
